--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -8,23 +8,136 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Detail Task View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="IDDetailTask" id="BYZ-38-t0r" customClass="DetailTaskViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="d2Z-e4-Wso">
+                                <rect key="frame" x="10" y="54" width="394" height="425.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="69" translatesAutoresizingMaskIntoConstraints="NO" id="CzX-IJ-Y8E">
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ERg-az-zLB">
+                                                <rect key="frame" x="0.0" y="0.0" width="394" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQ3-Q0-Z7B">
+                                        <rect key="frame" x="0.0" y="28.5" width="394" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name task:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M5O-Yp-kN5">
+                                        <rect key="frame" x="0.0" y="70.5" width="86" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aEb-FX-218">
+                                        <rect key="frame" x="0.0" y="99" width="394" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HGs-Yp-rwF">
+                                        <rect key="frame" x="0.0" y="141" width="50" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="-" textAlignment="natural" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tsE-as-0e8">
+                                        <rect key="frame" x="0.0" y="169.5" width="394" height="150"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="8Ig-pz-baW"/>
+                                        </constraints>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5l7-0i-vCo">
+                                        <rect key="frame" x="0.0" y="327.5" width="394" height="45"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date sheduled:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJt-ta-Pi8">
+                                                <rect key="frame" x="0.0" y="0.0" width="115" height="45"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <datePicker contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="RFR-7W-mYU">
+                                                <rect key="frame" x="123" y="0.0" width="271" height="45"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="45" id="MNG-9F-uu2"/>
+                                                </constraints>
+                                            </datePicker>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="KDf-49-eKH">
+                                        <rect key="frame" x="0.0" y="380.5" width="394" height="45"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date deadline:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhj-9f-ADo">
+                                                <rect key="frame" x="0.0" y="0.0" width="109.5" height="45"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <datePicker contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="nkv-HS-17H">
+                                                <rect key="frame" x="132.5" y="0.0" width="261.5" height="45"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="45" id="GP2-1c-YeR"/>
+                                                </constraints>
+                                            </datePicker>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="CzX-IJ-Y8E" secondAttribute="trailing" id="93z-c4-ygg"/>
+                                    <constraint firstItem="aEb-FX-218" firstAttribute="leading" secondItem="d2Z-e4-Wso" secondAttribute="leading" id="Cu0-eA-mB7"/>
+                                    <constraint firstAttribute="trailing" secondItem="aEb-FX-218" secondAttribute="trailing" id="IKH-gV-h9G"/>
+                                    <constraint firstItem="KDf-49-eKH" firstAttribute="leading" secondItem="d2Z-e4-Wso" secondAttribute="leading" id="JCk-LY-Z4v"/>
+                                    <constraint firstItem="eQ3-Q0-Z7B" firstAttribute="leading" secondItem="d2Z-e4-Wso" secondAttribute="leading" id="Jly-Sd-49s"/>
+                                    <constraint firstItem="tsE-as-0e8" firstAttribute="leading" secondItem="d2Z-e4-Wso" secondAttribute="leading" id="M28-4z-5QY"/>
+                                    <constraint firstAttribute="trailing" secondItem="eQ3-Q0-Z7B" secondAttribute="trailing" id="M49-hv-dDq"/>
+                                    <constraint firstAttribute="trailing" secondItem="5l7-0i-vCo" secondAttribute="trailing" id="MSZ-18-azV"/>
+                                    <constraint firstItem="CzX-IJ-Y8E" firstAttribute="leading" secondItem="d2Z-e4-Wso" secondAttribute="leading" id="Pu0-hP-et5"/>
+                                    <constraint firstItem="5l7-0i-vCo" firstAttribute="leading" secondItem="d2Z-e4-Wso" secondAttribute="leading" id="X55-si-jQL"/>
+                                    <constraint firstAttribute="trailing" secondItem="tsE-as-0e8" secondAttribute="trailing" id="XZQ-gZ-Bq2"/>
+                                    <constraint firstAttribute="trailing" secondItem="KDf-49-eKH" secondAttribute="trailing" id="dTu-oS-874"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d2Z-e4-Wso" secondAttribute="trailing" constant="10" id="21f-cK-S58"/>
+                            <constraint firstItem="d2Z-e4-Wso" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="Nnw-oK-Arw"/>
+                            <constraint firstItem="d2Z-e4-Wso" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="gV6-ia-IIR"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="deadlineDP" destination="nkv-HS-17H" id="yr9-FF-ZSl"/>
+                        <outlet property="groupTF" destination="eQ3-Q0-Z7B" id="aDe-fX-KxR"/>
+                        <outlet property="nameTF" destination="aEb-FX-218" id="LnN-tB-liD"/>
+                        <outlet property="noteTV" destination="tsE-as-0e8" id="ucq-Qz-otp"/>
+                        <outlet property="scheduleDP" destination="RFR-7W-mYU" id="oc1-q0-3du"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="84"/>
+            <point key="canvasLocation" x="46" y="19"/>
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
