--- a/ToDoList/ToDoList/Sources/View/Cell/TaskCell.xib
+++ b/ToDoList/ToDoList/Sources/View/Cell/TaskCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IDCell" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="ToDoList" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IDCell" id="KGk-i7-Jjw" customClass="TaskCell" customModule="ToDoList" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -46,8 +46,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="nameLabel" destination="K2e-sR-5hV" id="7IP-eo-MfH"/>
-                <outlet property="statusImageView" destination="ZZp-H1-eaZ" id="PVA-qg-hwW"/>
+                <outlet property="nameLabel" destination="K2e-sR-5hV" id="v2u-dp-Gyr"/>
+                <outlet property="statusImageView" destination="ZZp-H1-eaZ" id="s5e-Hh-hwD"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="99.776785714285708"/>
         </tableViewCell>
